# ready-to-rabbit

./: Cargo.toml  Makefile.toml  README.md  build.rs
.github/workflows/: build-release.yaml  build.yaml  release.yaml
block-the-rabbit/: Cargo.toml
block-the-rabbit/src/: block.rs  lib.rs
ready-the-rabbit/: Cargo.toml  build.rs
ready-the-rabbit/src/: main.rs
src/: main.rs
test-the-rabbit/: Cargo.toml
test-the-rabbit/src/: main.rs
