[package]
name = "block-the-rabbit"
version = "0.1.0"
edition = '2018'

[dependencies]
redbpf-macros = { git = "https://github.com/aquarhead/redbpf.git", branch = "xdp-multi-attach" }
redbpf-probes = { git = "https://github.com/aquarhead/redbpf.git", branch = "xdp-multi-attach" }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "block-the-rabbit"
path = "src/block.rs"
required-features = ["probes"]
